tests/format/link/invalid/elements/link-with-sources.bst
kind: link

sources:
- kind: local
  path: .

config:
  target: base-file.bst
